automatically backed up by learn

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,5 @@
 <ul>
-<% @category.posts.each |comment| %>
-  <li><%= comment.content
+<% @category.posts.each |post| %>
+  <li><%= post.content %> </li>
+
+  <% end %>
