--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @comment do |f| %>
+<%= form_for @post.comments do |f| %>
   <%= f.text_area :content %>
   <%= f.submit %>
   <% end %>
