--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,3 @@
-<%= form_for @post.comment do |f| %>
-  <%= f.text_field :content %>
-  <%= f.submit %>
-  <% end %>
+<h1><%= @post.title %></h1>
+<p><%= @post.content %></p>
+
