automatically backed up by learn

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.content %></p>
-<p>Categories: 
+<p>Categories:
   <% @post.categories.each do |c| %>
   <%= c.name %>
+  <% end %>
 </p>
