--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,6 @@
 <p><%= @post.content %></p>
 <p>Categories:
   <% @post.categories.each do |c| %>
-  <%= c.name %>
+  <%= c.name %>,
   <% end %>
 </p>
