--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,8 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.content %></p>
 <p>Categories:
+  <ul>
   <% @post.categories.each do |c| %>
-  <%= c.name %>,
+  <%= c.name %>
   <% end %>
 </p>
