automatically backed up by learn

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,4 +6,10 @@
   <li><%= c.name %></li>
   <% end %>
 </ul>
+<br><br>
+
+<h3>COMMENTS </h3>
+  <ul>
+  <li><% @post.comments.each do |c| %></li>
+</ul>
 </p>
