--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,5 +12,6 @@
 
 <h3>COMMENTS </h3>
   <ul>
-    <li><% @post.comments.each do |c| %></li>
+    <% @post.comments.each do |c| %>
+    <li></li>
   </ul>
