--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,13 @@
 </p>
 <br><br>
 
+<%= form_for post do |f| %>
+  <%= f.label "Title" %>
+  <%= f.text_field :title %>
+
+  <%= f.label "Content" %>
+  <%= f.text_area :content %>
+
 <h3>COMMENTS </h3>
   <ul>
     <% @post.comments.each do |c| %>
