--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,10 +12,12 @@
 
 <%= form_for @post do |f| %>
   <%= f.label "Comment" %>
-  <%= f.text_field :title %>
+  <%= f.text_field :comment %>
 
-  <%= f.label "Content" %>
-  <%= f.text_area :content %>
+  <%= f.fields_for :comments, post.categories.build do |categories_fields| %>
+
+    <%= categories_fields.text_field :name %>
+  <% end %>
 
 <h3>COMMENTS </h3>
   <ul>
