--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 
 <%= form_for @post do |f| %>
   <%= f.label "Comment" %>
-  <%= f.fields_for :comments, post.comments.build do |comment| %>
+  <%= f.fields_for :comments, @post.comments.build do |comment| %>
     <%= comment.text_field :content %>
   <% end %>
   <%= f.submit %>
