--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,6 +21,6 @@
 <h3>COMMENTS </h3>
   <ul>
     <% @post.comments.each do |c| %>
-    <li> c.content</li>
+    <li> <%= c.content %></li>
     <% end %>
   </ul>
