--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,7 +21,7 @@
 <h3>COMMENTS </h3>
   <ul>
     <% @post.comments.each do |c| %>
-    
-    <li> <%= c.user.username %> - <%= c.content %></li>
+
+    <li> <%= c.username %> - <%= c.content %></li>
     <% end %>
   </ul>
